# itmo-cloud-lab-3-p1

./: .gitignore  README.md  __init__.py  core.py  pyproject.toml
.github/workflows/: bad-ci.yml  good-ci.yml
src/: cli.py
src/tests/: test_cli.py
tests/: test_cli.py  test_core.py
