[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-cli"
version = "0.1.0"
description = "Simple CLI tool for temperature conversion and weather formatting"
authors = [
  { name = "Student", email = "student@university.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
weather-cli = "weather_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
